<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Maishoku</string>
    <string name="logo">logo</string>
    <string name="ok">OK</string>
    <string name="roppongi_hills">Roppongi 6&#8211;10&#8211;1, Minato&#8211;ku, Tokyo</string>
    <string name="gps">GPS</string>
    <string name="search_by_current_location">Search by current location</string>
    <string name="network_error">Network Error</string>
    <string name="check_connection">Please check your network connectivity.</string>
    <string name="total_price">Total Price: ¥</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="add_to_favorites">Add To Favorites</string>
    <string name="favorite_added">Added to favorites.</string>
    <string name="favorite_failed">Failed to add to favorites.</string>
    <string name="order_failed">Order Failed</string>
    <string name="contact_support">Please contact support@maishoku.com for assistance.</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_confirmed">Your order has been confirmed.\nEstimated wait time is\u0020</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="security_code">Security Code</string>
    <string name="save_card">Save Card Details</string>
    <string name="new_card">New Card</string>
    <string name="saved_card">Saved Card</string>
    <string name="items">Items</string>
    <string name="menu">Menu</string>
    <string name="quantity_in_cart">Quantity currently in cart:\u0020</string>
    <string name="failed_to_load_item">Failed to load item</string>
    <string name="load_screen_again">Please try to load screen again</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="select_address">Select your address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="logout">Logout</string>
    <string name="delivery">Delivery</string>
    <string name="pickup">Pickup</string>
    <string name="favorites">Favorites</string>
    <string name="groups">Groups</string>
    <string name="getting_location">Retrieving your location&#8230;</string>
    <string name="locating_failed">Failed to retrieve your location</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_failed">Login Failed</string>
    <string name="please_try_again">Please try again</string>
    <string name="enter_new_address">Enter New Address</string>
    <string name="failed_to_add_new_address">Failed to add new address</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="group_name">Group Name</string>
    <string name="awesome_group">Awesome Group</string>
    <string name="restaurants">Restaurants</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="minimum_delivery">Minimum Delivery Amount</string>
    <string name="cuisines">Cuisines</string>
    <string name="see_menu">See menu for this restaurant</string>
    <string name="passwords_are_not_same">Passwords are not the same</string>
    <string name="phone_number_invalid">Phone number invalid</string>
    <string name="phone_number_format">Phone number should start with 0 and be at least 10 digits long</string>
    <string name="email_invalid">Email address invalid</string>
    <string name="please_enter_valid_email">Please enter a valid email address</string>
    <string name="error">Error</string>
    <string name="sign_up_complete">Sign Up Complete</string>
    <string name="check_your_email">Check your email to complete activation</string>
    <string name="password_confirm">password (again)</string>
    <string name="email">email</string>
    <string name="phone_number">phone number</string>
    <string name="empty"></string>
    <string name="delete">Delete</string>
    <string name="price">Price: ¥</string>
    <string name="one">1</string>
    <string name="sep13">0913</string>
    <string name="amount_remaining">¥%d under this restaurant\'s minimum order amount.</string>
    <string name="address">Address</string>
    <string name="add_toppings">Add Toppings</string>
    <string name="no_toppings">No toppings available for this item</string>
    <string name="no_options">No options available for this item</string>
    <string name="category">Category</string>
    <string name="add_instructions">Add Order Instructions</string>
    <string name="phone_order">Phone Number</string>
    <string name="quantity">Quantity</string>
    <string name="loading">Loading&#8230;</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="closed">Closed</string>
    <string name="todays_hours">Today\'s Hours</string>
    <string name="building_name">Building Name</string>

</resources>