<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/loginLogoImageView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/logo"
        android:src="@drawable/maishoku" />

    <EditText
        android:id="@+id/loginUsernameEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/username"
        android:inputType="textFilter|textNoSuggestions"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true" >
    </EditText>

    <Button
        android:id="@+id/loginSubmitButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:text="@string/submit" />

    <Button
        android:id="@+id/loginSignUpButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/loginForgotPasswordButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_password" />

</LinearLayout>