<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/maishoku" />

    <EditText
        android:id="@+id/signupUsernameEditText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/imageView1"
        android:hint="@string/username"
        android:singleLine="true"
        android:textSize="14dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/signupPasswordEditText1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signupUsernameEditText"
        android:layout_below="@+id/signupUsernameEditText"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/signupPasswordEditText2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signupPasswordEditText1"
        android:layout_below="@+id/signupPasswordEditText1"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="12dp" />

    <EditText
        android:id="@+id/signupEmailEditText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signupPasswordEditText1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_marginRight="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textSize="14dp" />

    <EditText
        android:id="@+id/signupPhoneNumberEditText"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signupPasswordEditText2"
        android:layout_alignLeft="@+id/signupEmailEditText"
        android:layout_marginRight="30dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:singleLine="true"
        android:textSize="14dp" />

    <Button
        android:id="@+id/signupSubmitButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signupPasswordEditText2"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/submit" />

</RelativeLayout>