<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/locationRadioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/locationDeliveryRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center"
            android:text="@string/delivery" />

        <RadioButton
            android:id="@+id/locationPickupRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pickup" />
    </RadioGroup>

    <TextView
        android:id="@+id/locationSelectAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationRadioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/select_address" />

    <ListView
        android:id="@+id/locationListView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/locationGpsButton"
        android:layout_below="@+id/locationSelectAddressTextView"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp" >
    </ListView>

    <Button
        android:id="@+id/locationGpsButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/locationAddNewAddressButton"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/search_by_current_location"
        android:visibility="invisible" />

    <Button
        android:id="@+id/locationAddNewAddressButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/locationLogoutButton"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/add_new_address" />

    <Button
        android:id="@+id/locationLogoutButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/logout" />

</RelativeLayout>