<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/newAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/enter_new_address" />

    <EditText
        android:id="@+id/newAddressAddressEditText"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newAddressTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/roppongi_hills"
        android:inputType="textPersonName"
        android:textSize="14dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newAddressBuildingNameEditText"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newAddressAddressEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:hint="@string/building_name"
        android:inputType="textPersonName"
        android:textSize="14dp" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/newAddressSubmitButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newAddressBuildingNameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/submit" />

</RelativeLayout>