<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/restaurantLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/restaurantTableLayout"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/restaurantImageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/logo" >
        </ImageView>

        <ScrollView
            android:id="@+id/restaurantScrollView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/restaurantTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />
        </ScrollView>
    </LinearLayout>

    <TableLayout
        android:id="@+id/restaurantTableLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/restaurantButton"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp" >

        <LinearLayout
            android:id="@+id/restaurantLinearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/restaurantTableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/restaurantAddressTextView1"
                    android:layout_width="fill_parent"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/restaurantTableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/restaurantAddressTextView2"
                    android:background="@android:color/transparent"
                    android:text="@string/address"
                    android:textSize="12dp" />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/restaurantLinearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@android:drawable/editbox_background"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/restaurantTableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/restaurantPhoneNumberTextView1"
                    android:background="@android:color/transparent"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/restaurantTableRow4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/restaurantPhoneNumberTextView2"
                    android:background="@android:color/transparent"
                    android:text="@string/phone_order"
                    android:textSize="12dp" />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/restaurantLinearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@android:drawable/editbox_background"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/restaurantTableRow5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/restaurantHoursTextView1"
                    android:background="@android:color/transparent"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/restaurantTableRow6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/restaurantHoursTextView2"
                    android:background="@android:color/transparent"
                    android:text="@string/todays_hours"
                    android:textSize="12dp" />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/restaurantLinearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@android:drawable/editbox_background"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/restaurantTableRow7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/restaurantDeliveryTimeTextView1"
                    android:background="@android:color/transparent"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/restaurantTableRow8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/restaurantDeliveryTimeTextView2"
                    android:background="@android:color/transparent"
                    android:text="@string/delivery_time"
                    android:textSize="12dp" />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/restaurantLinearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@android:drawable/editbox_background"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/restaurantTableRow9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/restaurantMinimumDeliveryTextView1"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/restaurantTableRow10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/restaurantMinimumDeliveryTextView2"
                    android:background="@android:color/transparent"
                    android:text="@string/minimum_delivery"
                    android:textSize="12dp" />
            </TableRow>
        </LinearLayout>
    </TableLayout>

    <Button
        android:id="@+id/restaurantButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/see_menu" />

</RelativeLayout>